<resources>
    <string name="app_name">Trivia Quiz</string>
    <string name="next_button_text">Next button</string>
    <string name="prev_button_text">Previous button</string>
    <string name="choose_your_avatar">Choose your avatar</string>
    <string name="nick">Your nick</string>
    <string name="first_girl_avatar_descr">first girl avatar</string>
    <string name="second_girl_avatar_descr">second girl avatar</string>
    <string name="first_man_avatar_descr">first man avatar</string>
    <string name="second_man_avatar_descr">second man avatar</string>
    <string name="choose_questions_categories">Choose questions categories</string>
    <string name="test_category_name">Entertainment: Japanese Anime + Manga</string>
    <string name="category_icon">Category icon</string>
    <string name="navigation_drawer_open">Open DC</string>
    <string name="navigation_drawer_close">Close DC</string>
    <string name="questions_quantity_difficulty"><![CDATA[Questions quantity & difficulty]]></string>
    <string name="questions_categories">Questions categories</string>
    <string name="newUserBooleanIntentExtra">newUser</string>
    <string name="ButtonPreviousVisibility">ButtonPreviousVisibility</string>
    <string name="current_player">Current player</string>
    <string name="available_users">Available users</string>
    <string name="new_user">new user</string>
    <string name="network_s_dowm_warning">network is down now. can not update categories list from net</string>
    <string name="questions_difficulty">Questions difficulty</string>
    <string name="chosen_categories">Chosen categories</string>
    <string name="quantity_of_questions">Max. questions</string>
    <string name="user_accuracy">"accuracy: %1$d%%"</string>
    <string name="user_results">"%1$d correct answers of %2$d"</string>
    <string name="about_string">All questions kindly provided by The Open Trivia Database  opentdb.com\n\nAll pictures kindly provided by www.flaticon.com\n\nMany thanks to Udacity and Google for provided opportunity and inspiration! =)</string>
    <string name="achievements_title">Achievements</string>
    <string name="done_btn">done</string>
    <string name="prev_q_btn">Prev.Q</string>
    <string name="next_q_btn">Next Q</string>
    <string name="question_category_img">question_category</string>
    <string name="correct_answers_title">Correct answers</string>
    <string name="user_icon">user icon</string>
    <string name="app_icon">app icon</string>
    <string name="difficulty_title">difficulty:</string>
    <string name="question_title">Question</string>
    <string name="total_num_of_verified_questions">Total verified questions: </string>
    <string name="my_achievements_menu_point">My achievements</string>
    <string name="reset_total_scores_menu_point">Reset total scores</string>
    <string name="about_triviaquiz_menu_point">About TriviaQuiz</string>
    <string name="settings_menu_header">Settings</string>
    <string name="should_delete_history">Now we\'ll delete all history for current user</string>
    <string name="sure">Are you sure?</string>
    <string name="should_choose_categories_before">You should choose categories before getting questions.)</string>
    <string name="make_max_questions_greater">make max.questions be greater then quantity of categories.</string>
    <string name="share_body">I use TriviaQuiz App =)!</string>
    <string name="share_extra">Did you know?</string>
    <string name="share_via">Share via</string>
    <string name="share_type">text/plain</string>
    <string name="current_frag">Current</string>
    <string name="total_frag">Total</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="category">category</string>
    <string name="amount">amount</string>
    <string name="difficulty">difficulty</string>
    <string name="radioButton">radioButton</string>
    <string name="id">id</string>
    <string name="NoticeDialogFragment_tag">NoticeDialogFragment</string>
    <string name="currentQuizQuestions">currentQuizQuestions</string>
    <string name="lets">let\'s continue! =)</string>
    <string name="unanswered">There are unanswered questions left</string>
    <string name="live_curr_quiz">Are you sure you want to leave current quiz?</string>
    <string name="About_activity">About~activity</string>
    <string name="action">Action</string>
    <string name="action_sh">Share</string>
    <string name="overall">overall</string>
    <string name="count_global_url">https://opentdb.com/api_count_global.php</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="must_implement">must implement NoticeDialogListener</string>
    <string name="total_num_of_verified_questions_">total_num_of_verified_questions</string>

    <string-array name="difficulties_array">
        <item>""</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>
